--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -19,15 +19,15 @@
       "gender": "male",
       "position": "undergraduate",
       "level": "intermediate",
-      "roles": [ "partner", "spotter" ],
-      "goals": [ "strength training", "cardio", "weight loss"],
-      "styles": [ "powerlifting", "plyometrics", "running"],
-      "sports": [ "basketball", "soccer" ],
-      "hobbies": [ "video games", "hiking"],
+      "roles": "partner",
+      "goals": "strength training",
+      "styles": "powerlifting",
+      "sports": "basketball",
+      "hobbies": "video games",
       "major": "computer science",
       "image": "https://raw.githubusercontent.com/manoa-fit-connect/manoa-fit-connect.github.io/main/images/placeholder.png",
-      "availability": "",
-      "description": "",
+      "availability": "MWF 1pm-2:30pm",
+      "description": "Legs, Chest, Back",
       "owner": "john@foo.com"
     }
   ]
