--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -113,5 +113,31 @@
       "equipmentDescription": "The Smith machine is a versatile piece of equipment that allows for a wide range of exercises targeting various muscle groups, including chest, shoulders, legs, and more.",
       "owner": "admin@foo.com"
     }
-  ]
+  ],
+  "defaultWorkouts": [
+    {
+      "date": "4/8/2024",
+      "difficulty": 4,
+      "highlight": "Hit 215 for 3 today on bench",
+      "name": "Bench Day",
+      "owner": "john@foo.com",
+      "rating": 3
+    },
+    {
+      "date": "4/6/2024",
+      "difficulty": 5,
+      "highlight": "Hit a new pr to on squat 395 for 3",
+      "name": "Squat Day",
+      "owner": "john@foo.com",
+      "rating": 5
+    },
+    {
+      "date": "4/2/2024",
+      "difficulty": 4,
+      "highlight": "Feeling more confident on deadlift hitting 435 for 4",
+      "name": "Deadlift Day",
+      "owner": "admin@foo.com",
+      "rating": 4
+    }
+]
 }
