--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -217,7 +217,7 @@
       "itemName": "Bench Press",
       "category": "Strength",
       "locationFound": "2nd Floor",
-      "image": "images/heart.png",
+      "image": "images/bench.jpeg",
       "description": "The bench press is a strength training exercise that works the chest, shoulders, and triceps using a barbell or dumbbells."
     },
     {
