--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -16,10 +16,10 @@
       "firstName": "John",
       "lastName": "Doe",
       "image": "https://raw.githubusercontent.com/manoa-fit-connect/manoa-fit-connect.github.io/main/images/placeholder.png",
-      "status": "undergraduate",
-      "level": "intermediate",
-      "goals": "strength training",
-      "styles": "powerlifting",
+      "status": "Undergraduate Student",
+      "level": "Intermediate",
+      "goals": "Strength",
+      "styles": "Powerlifting",
       "owner": "john@foo.com"
     }
   ],
